[package]
name = "download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
ip2geo = { version = "0.1.0", path = ".." }
